fix page gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,6 @@
   background-attachment: fixed;
   object-fit: cover;
   object-position: center;
-  gap: var(--page-gap, 40px);
 }
 
 .content {
@@ -60,6 +59,7 @@
   inline-size: 100%;
   grid-template-rows: 1fr auto 1fr;
   min-block-size: var(--min-block-size, 668px);
+  margin-block-end: var(--page-gap);
 
 }
 
@@ -199,6 +199,7 @@
   justify-content: center;
   --title-shadow-style: 2px 2px 0 var(--accent-bakcground-color, #ff8dcb);
   min-block-size: var(--min-block-size, 668px);
+  margin-block-start: var(--page-gap);
 }
 
 @media (768px <= width) {
@@ -221,7 +222,7 @@
 
   .section {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 100fr 206fr;
     grid-auto-rows: auto;
     gap: var(--section-gap, 20px);
   }
